# moonlight

./: .gitignore  main.css  main.css.map  main.py  moon_daemon.py  package.json  profile.out  pyproject.toml  pyrightconfig.json  requirements.txt  sass  sass.sh  start.sh  style.css  test.py
assets/: resolved_icons.json
config/: __init__.py  config.jsonc  data.py
configs/: activate-linux.jsonc  cava_desktop.jsonc  cavalade.jsonc  config.jsonc  day-info-desktop.jsonc  dock-station.jsonc  language-preview.jsonc  my-corner.jsonc  notification.jsonc  screen-menu.jsonc  status-bar.jsonc
dev/: hyprland_start_dev.sh
modules/: __init__.py  activate_linux.py  cava_desktop.py  corners.py  desktop_clock.py  dock.py  handler.py  notification.py  screen_menu.py  status_screen.py
services/: __init__.py  audio_status_provider.py  battery.py  check_config.py  headset.py  network.py  networkspeed.py  player.py  player_.py  screen_record.py
shared/: animated_entry.py  app_icon.py  app_name_relover.py  applications_box.py  arrow_icon.py  blur_image.py  circular_image.py  combotext.py  dropshadow.py  exceptions.py  expandable.py  file_picker.py  input.py  linearprogressbar.py  menu.py  module_selector.py  switch.py  windget_container.py
styles/: activate_linux.css  import.sass  statusbar.css
tests/: run.py  test.py  test_constants.py
utils/: __init__.py  animatior.py  colors_parse.py  config_handler.py  configuration_handler.py  constants.py  dbus_helper.py  decorators.py  events.py  file_manager.py  fixed_tools.py  get_preview.py  hex_to_rgb.py  icon_resolver.py  jsonc.py  (+7 more)
(+455 files in other folders)
