[project]
name = "moonlight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fabric",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "py-spy>=0.4.1",
    "pywal>=3.3.0",
    "requests>=2.32.4",
]

[tool.uv.sources]
fabric = { git = "https://github.com/Fabric-Development/fabric.git" }
