[project]
name = "moonlight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "fabric",
    "loguru>=0.7.3",
    "pillow>=12.0.0",
    "psutil>=7.1.0",
    "pycairo>=1.28.0",
    "pygobject>=3.50.0",
    "rich>=14.2.0",
    "tinycss2>=1.4.0",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
fabric = { git = "https://github.com/Fabric-Development/fabric.git" }

[dependency-groups]
dev = [
    "pygobject-stubs>=2.13.0",
    "pytest>=8.4.2",
    "dart-sass>=0.5.2",
]
