[project]
name = "moonlight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dart-sass>=0.5.2",
    "dbus-next>=0.2.3",
    "fabric",
    "pillow>=12.0.0",
    "psutil>=7.2.1",
    "pyudev>=0.24.4",
]

[tool.uv.sources]
fabric = { git = "https://github.com/Fabric-Development/fabric.git" }

[dependency-groups]
dev = [
    "pygobject-stubs>=2.16.0",
]
